--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dev_dependencies:
   args: ^1.6.0
   build_runner: ^1.10.11
   build_test: ^1.3.2
-  json_serializable: ^4.0.0
+  json_serializable:
   build_resolvers: ^1.5.1
   pedantic: ^1.9.2
   test: ^1.15.7
