--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   gql_link: ^0.3.1-alpha
   gql: ^0.12.4
   http: ^0.13.0
-  json_annotation: ^4.0.0
+  json_annotation: >=3.1.0 <3.2.0
   meta: ^1.2.4
   path: ^1.7.0
   recase: ^3.0.1
