--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   dart_style: ^1.3.10
   equatable: ^1.2.5
   glob: ^1.2.0
-  gql_code_gen: ^0.2.0-alpha.1
+  gql_code_gen: ^0.1.5
   gql_dedupe_link: ^1.0.10
   gql_exec: ^0.2.5
   gql_http_link: ^0.3.2
